--- a/sm7_gsa_network.Rmd
+++ b/sm7_gsa_network.Rmd
@@ -51,7 +51,7 @@ theme_set(theme_classic()) # classic theme ggplot
 
 ```{sh eval=FALSE}
 sudo apt install r-bioc-rsamtools
-sudo apt intall r-cran-biasedurn
+sudo apt install r-cran-biasedurn
 ```
 
 *Remark on a technical issue*: You need `C++` compiler installed in your machine if you want to use `fgsea` with best performance.
